--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1752,6 +1752,16 @@ form textarea {
 }
 
 @media screen and (max-width: 990px) {
+
+  .forecast-container .forecast.today .forecast-content {
+    text-align: left;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    height: 74rem !important;
+  }
+
   .forecast-container .forecast.today {
     display: block;
     width: 100%;
@@ -1794,7 +1804,7 @@ form textarea {
   }
 
   .site-content{
-    height: 123vh !important;
+    height: 100% !important;
   }
 }
 
@@ -2425,8 +2435,12 @@ form textarea {
 
 .icon-info{
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   width: 100%;
+}
+
+.icon-info p::first-letter{
+  text-transform: capitalize;
 }
